JWLS-3 Added endpoint to get relay config
